@@ -122,6 +122,11 @@ void
 AbstractTask::update_stats_distances(const GeoPoint &location,
                                      const bool full_update)
 {
+  const TaskPoint *active = GetActiveTaskPoint();
+  stats.current_leg.vector_remaining = active != NULL
+    ? active->GetVectorRemaining(location)
+    : GeoVector::Invalid();
+
   stats.total.remaining.set_distance(scan_distance_remaining(location));
 
   if (full_update)
